# pufferfish-software

./: .gitmodules  mcu_pb.ts
backend/: .gitignore  .pylintrc  README.md  pyproject.toml  pytest.ini
backend/configs/: arduino.json  simulation.json
backend/docs/: Makefile  README.md  index.rst
backend/docs/_build/doctrees/: environment.pickle  index.doctree  ventserver.doctree  ventserver.integration.doctree  ventserver.io.asynchronous.doctree  ventserver.io.doctree  ventserver.io.trio.doctree  ventserver.protocols.application.doctree  ventserver.protocols.doctree  ventserver.protocols.protobuf.doctree  ventserver.sansio.doctree  ventserver.util.doctree
backend/docs/_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  ventserver.html  ventserver.integration.html  ventserver.io.asynchronous.html  ventserver.io.html  ventserver.io.trio.html  ventserver.protocols.application.html  ventserver.protocols.html  ventserver.protocols.protobuf.html  ventserver.sansio.html  ventserver.util.html
backend/docs/_build/html/_modules/: betterproto.html  index.html
backend/docs/source/: conf.py  index.rst
backend/docs/source/_build/doctrees/: environment.pickle  index.doctree
backend/docs/source/_build/doctrees/api/: modules.doctree  tests.doctree  tests.integration.doctree  tests.integration.trio.doctree  tests.io.doctree  tests.io.trio.doctree  tests.mocks.doctree  tests.mocks.trio.doctree  (+17 more)
backend/docs/source/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
backend/docs/source/api/: modules.rst  tests.integration.rst  tests.io.rst  tests.io.trio.rst  tests.mocks.trio.rst  tests.profiling.rst  tests.rst  tests.unit.protocols.application.rst  tests.unit.rst  tests.unit.util.rst
backend/tests/bdd_samples/: guidelines.md  test_crcelements_bdd_style.py
backend/tests/features/: crc_data_integrity_filter.feature
backend/tests/generic_tests/: hash_tests.py
backend/tests/integration/: test_frontend.py  test_mcu.py
backend/tests/integration/sequential/: io.py  mocks.py
backend/tests/integration/trio/: application.py  io.py
backend/tests/io/sequential/: serial.py
backend/tests/io/trio/: re_pigpio.py
backend/tests/mocks/sequential/: endpoints.py
backend/tests/mocks/trio/: frontend_client.py
backend/tests/profiling/: hash_tests.py
backend/tests/unit/io/trio/: test_fileio.py
backend/tests/unit/protocols/: test_application.py  test_crcelements.py  test_crcfilter.py  test_datagrams.py  test_file.py
backend/tests/unit/protocols/application/: test_clocks.py  test_lists.py  test_states.py
backend/tests/unit/protocols/devices/: test_file.py  test_rotaryencoder.py
backend/tests/unit/protocols/transport/: test_chunks.py  test_cobs.py  test_crcelements.py  test_datagrams.py  test_messages.py
backend/tests/unit/util/: test_crc.py
backend/ventserver/: application.py  profile.py  simulation.py  simulator.py
backend/ventserver/integration/: _trio.py  sequential.py
backend/ventserver/io/: fileobject.py  frontend.py  rotaryencoder.py
backend/ventserver/io/sequential/: _serial.py  endpoints.py
backend/ventserver/io/subprocess/: frozen_frontend.py
backend/ventserver/io/trio/: _serial.py  fileio.py  processes.py  rotaryencoder.py  rotaryencoder1.py  websocket.py
backend/ventserver/protocols/: __init__.py  backend.py  crc.py  crcfilter.py  datagrams.py  exceptions.py  file.py  frontend.py  log.py  mcu.py  server.py
backend/ventserver/protocols/application/: __init__.py  clocks.py  connections.py  debouncing.py  events.py  lists.py  states.py
backend/ventserver/protocols/backend/: __init__.py  alarms.py  backend.py  connections.py  log.py  server.py  states.py
backend/ventserver/protocols/devices/: __init__.py  file.py  frontend.py  mcu.py  rotary_encoder.py
backend/ventserver/protocols/protobuf/: __init__.py  frontend_pb.py  mcu_pb.py
backend/ventserver/protocols/transport/: __init__.py  crcelements.py  datagrams.py  frames.py  messages.py
backend/ventserver/simulation/: alarm_limits.py  alarm_mute.py  alarms.py  events.py  log.py  parameters.py  power_management.py  screen_status.py  simulators.py
backend/ventserver/statestore/: Alarms.pb  CycleMeasurements.pb  Parameters.pb  ParametersRequest.pb  SensorMeasurements.pb
backend/ventserver/util/: crc.py
firmware/ventilator-controller-stm32/: .clang-format  .clang-tidy  .cproject  .gitignore  .mxproject  CMakeLists.txt  README.md  application.cppcheck  clang-format-all.sh  clang-format-stm32cubemx-user.sh  clang-tidy-all.sh  cmake.sh  cppcheck.sh  testcatch2.cppcheck  ventilator-controller-stm32.ioc
firmware/ventilator-controller-stm32/Core/Inc/: main.h  mcu_pb.pb.h  stm32h7xx_hal_conf.h
firmware/ventilator-controller-stm32/Core/Inc/Pufferfish/: AlarmsManager.h  Statuses.h  Types.h
firmware/ventilator-controller-stm32/Core/Inc/catch2/: catch.hpp
firmware/ventilator-controller-stm32/Core/Src/: main.cpp  stm32h7xx_hal_msp.c  stm32h7xx_it.cpp
firmware/ventilator-controller-stm32/Core/Src/Pufferfish/: AlarmsManager.cpp
firmware/ventilator-controller-stm32/Core/Src/nanopb/: pb_decode.c  pb_encode.c
firmware/ventilator-controller-stm32/Core/Test/Pufferfish/: catch2.cpp  timeouts.cpp  timestamps.cpp
firmware/ventilator-controller-stm32/cmake/: toolchain-arm-none-eabi.cmake
(+839 files in other folders)
